--- a/readpkgelf.1
+++ b/readpkgelf.1
@@ -17,7 +17,7 @@
 .Sh DESCRIPTION
 This tool is helpful to find library dependencies of packages without
 unpacking or installing them to a temporary location. It reads through
-the archive file, optionally parses a .PKGINFO file one is
+the archive file, optionally parses a .PKGINFO file if one is
 encountered, and then prints a list of required libraries of each ELF
 file contained in the library.
 .Pp
