--- a/pkgdepdb.1
+++ b/pkgdepdb.1
@@ -1,9 +1,9 @@
 .\"mdoc
 .Dd June 6, 2013
-.Dt PACDEPDB 1
+.Dt PKGDEPDB 1
 .Os
 .Sh NAME
-.Nm pacdepdb
+.Nm pkgdepdb
 .Nd read Arch package archive files, and print the required library names
 .Sh SYNOPSIS
 .Nm readelf
@@ -88,4 +88,4 @@ Insert the directory at the specified index.
 Remove all paths from the db.
 .El
 .Sh AUTHOR
-See <http://github.com/Blub/pacdepdb>.
+See <http://github.com/Blub/pkgdepdb>.
