--- a/pkgdepdb.1
+++ b/pkgdepdb.1
@@ -44,6 +44,8 @@ database.
 Delete mode: delete (uninstall) the listed packages from the database.
 In this mode, the non-option parameters are package names, not package
 archive files!
+.It Fl -dry
+Dry run: do not commit the changes to the database file.
 .It Fl I , Fl -info
 Show some general information about the database: The database format
 version and the database's name.
