less confusing wording

--- a/pkgdepdb.1
+++ b/pkgdepdb.1
@@ -112,7 +112,7 @@ When a database is provided with the
 switch, database related actions can be performed, such as installing
 packages, querying, or modifying the library path used in the DB.
 .Pp
-Here's an example which starts a new database:
+Here's an example which updates or creates a database:
 .Bd -literal -offset indent
 $ pkgdepdb -d dep.core.db.gz -i freebsd-world-9.1-4-x86_64.pkg.tar.xz
 *** loading packages...
