mentioning the uninstall target in the README

--- a/README
+++ b/README
@@ -70,6 +70,13 @@ Installation:
             Files:
                 pkgdepdb.1
 
+    Deinstallation:
+
+        There exists an `uninstall' make-target, however you  have	to
+        specifcy the same PREFIX and  DESTDIR  variables  as  you  did
+        while installing the package in order to  remove  the  correct
+        files.
+
 License:
 
     See the LICENSE file.
