help/manpage fix

--- a/pkgdepdb.1
+++ b/pkgdepdb.1
@@ -172,7 +172,7 @@ before the index matching the ID as seen using the
 query.
 .It Fl -rule Cm pkg-ld-delete: Ns Ar package Ns Ar path
 Remove the specified path from the package's library path list.
-.It Fl -rule Cm pkg-ld-delete: Ns Ar package Ns Ar ID
+.It Fl -rule Cm pkg-ld-delete-id: Ns Ar package Ns Ar ID
 Remove the specified path from the package's library path list using
 the path's ID.
 .El
