--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-2013-07-XX Release 0.1.2
+2013-07-09 Release 0.1.2
 
 	- A rebuild of databases will be required (format changes)
 	- Database format version improved
