--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* filter support:
 		-f filters -fname= -fname: -fname/regex/
 		And negation by prefixing with a !
+		group filters added
 
 2013-10-22 Blub
 
