--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
-2013-11-03 Release 0.1.3.5
+2013-11-03 Release 0.1.3.6
 	- Filters added for various queries using the -f switch
 	- Database version bumped to 5, contains the group list now
 	- bug fixes:
 		* file locking code fixed to work on non-BSD
 		* --integrity doesn't show missing/conflict packages multiple
 		  times
+		* fixed a segfault (null deref) when the db file doesn't exist
 
 2013-08-04 Release 0.1.3
 
