--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2013-11-03 Release 0.1.4
+	- More filters, minor fixes
+	- noteworthy bug fixes:
+		* fixed: open() lacked a mode
+
 2013-11-03 Release 0.1.3.6
 	- Filters added for various queries using the -f switch
 	- Database version bumped to 5, contains the group list now
