changelog and manpage updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 		--ls now queries files
 	* new filter: filename filter for filelist queries
 		-ffile
+	* action: --rm-files - remove contained filelists
 
 2013-11-16 Blub
 
