--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+---------- Release 0.1.6
+	- Noticeably more efficient database reading.
+	- Tiny bugfixes
+	- Change in database layout
+	- DB verison 8: more efficient reference IDs.
+	- Added --touch
+
 2013-12-01 Release 0.1.5
 	- Config in ~/.config/pkgdepdb now supersedes ~/.pkgdepdb
 	- More filtres:
