--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-27 Blub
+
+	* buildfix for 32 bit
+	* refactoring and slight speed improvements
+
 2014-02-16 Blub
 
 	* bugfix: --relink didn't properly clear the missing/found sets
