--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,9 @@
-2014-02-27 Release 0.1.7
+2014-05-03 Release 0.1.7.1
+	- Bugfixes:
+		* uninitialized reference counters
+		* accidental removal of -flib* filters
+
+2014-04-27 Release 0.1.7
 	- Bugfixes:
 		* --relink didn't properly clear missing/found sets
 	- threaded --relink improved
