--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+2014-XX-YY Release 0.1.9
+	- new filter: -fcontains
+
 2014-07-12 Release 0.1.8
 	- integrity checks now honor replacement packages
 	- DB version 9: storing ELF interpreter data
