--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* DB version 10: makedepends
 	* Databases with package dependencies now require DB version 10 as they will
 	  use a different dependency list structure.
+	* C API started
+	* libpkgdepdb started
 
 2014-10-01 Blub
 
