--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,8 @@
 	- DB version 10: storing makedepends, new dependency list format: a tuple
 	  of string and version instead of just one string
 	- libpkgdepdb started
-	- Started implementing a C API for libpkgdepdb
+	- C API version 1 of libpkgdepdb
+	- some unit tests using libcheck
 
 2014-07-12 Release 0.1.8
 	- integrity checks now honor replacement packages
