--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-10-07 Blub
+
+	* libcheck tests
+	* C API version 1 in progress and unit-tested
+
 2014-10-06 Blub
 
 	* DB version 10: makedepends
