--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,10 @@
 	  of string and version instead of just one string
 	- libpkgdepdb started
 	- C API version 1 of libpkgdepdb
-	- some unit tests using libcheck
+	- C API unit tests using libcheck
+	- Python bindings to the C API
+	- Python binding unit tests.
+	- C API doxygen comments.
 
 2014-07-12 Release 0.1.8
 	- integrity checks now honor replacement packages
