--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 2015-XX-YY Release 0.1.11
+	- minor fixes
 
 2015-10-25 Release 0.1.10
 	- hotfix tag to show my ridiculous timing with tagging releases
